--- a/package/pyproject.toml
+++ b/package/pyproject.toml
@@ -1,3 +1,3 @@
 [build-system]
-requires = ["setuptools>=42", "numpy", "colorama", "CopperUI"]
+requires = ["setuptools>=42", "numpy", "colorama", "CopperUI", "sqlalchemy"]
 build-backend = "setuptools.build_meta"
